# SigmaTibiaRank

./: README.md  docker-compose.yml
Backend/: .ghci  .gitignore  Backend.cabal  CharacterService.hs  Db.hs  Dockerfile  Domain.hs  LearningResources.txt  LearningResourses.txt  Lib.hs  Main.hs  STR.cabal  Setup.hs  Spec.hs  Views.hs  stack.yaml
Backend/Tests/: CharacterServiceSpec.hs
Frontend/: .gitignore
Frontend/SigmaTibiaRank/: SigmaTibiaRank.sln
Frontend/SigmaTibiaRank/SigmaTibiaRank/: Program.cs  _Imports.razor
Frontend/SigmaTibiaRank/SigmaTibiaRank/Pages/: Index.razor
Frontend/SigmaTibiaRank/SigmaTibiaRank/Properties/: launchSettings.json
Frontend/SigmaTibiaRank/SigmaTibiaRank/Shared/: MainLayout.razor
Frontend/SigmaTibiaRank/SigmaTibiaRank/wwwroot/: index.html
Frontend/SigmaTibiaRank/SigmaTibiaRank/wwwroot/css/: app.css
Frontend/SigmaTibiaRank/SigmaTibiaRank/wwwroot/sample-data/: ranking.json
