name:          Backend
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          Backend
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , scalpel
                  , aeson
                  , HTTP
                  , postgresql-simple
                  , resource-pool
                  , http-conduit

Test-Suite      Test
    type:       exitcode-stdio-1.0
    main-is:    Spec.hs
    build-depends: base
            --  , Backend
                 , hspec