name:          STR
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable       BackendExec
    hs-source-dirs: .
    main-is:        Setup.hs
    build-depends:  Backend

library          Backend
    hs-source-dirs: .
    exposed-modules: CharacterService
                    , Domain
                    , Views
                    , Db

    -- main-is:        Main.hs
    ghc-options:    -Wall 
    -- -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , scalpel
                  , aeson
                  , HTTP
                  , postgresql-simple
                  , resource-pool
                  , http-conduit

Test-Suite      Test
    type:       exitcode-stdio-1.0
    hs-source-dirs: Tests
    main-is: Spec.hs
    build-depends: base
                , Backend 
                , hspec
    build-tool-depends: hspec-discover:hspec-discover  