name:          STR
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable       BackendExec
    hs-source-dirs: app
    main-is:        Main.hs
    build-depends:    base
                    , Backend 

library          Backend
    hs-source-dirs: .
    exposed-modules: CharacterService
                    , Lib
                    , Domain
                    , Views
                    , Db

    ghc-options:    -Wall 
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , ghc
                  , either
                  , bytestring
                  , containers 
                  , scalpel
                  , aeson
                  , HTTP
                  , postgresql-simple
                  , resource-pool
                  , http-conduit

Test-Suite      Test
    type:       exitcode-stdio-1.0
    hs-source-dirs: Tests
    main-is: Spec.hs
    build-depends: base
                , Backend 
                , hspec
    build-tool-depends: hspec-discover:hspec-discover  